--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>gradeulator</title>
-</head>
-<body>
-  <h2>soon™</h2>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>gradeulator</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+  </head>
+  <body>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+        gradeualtor
+      </h1>
+      <p class="subtitle">
+        coming soon
+      </p>
+    </div>
+  </section>
+  </body>
 </html>
