--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         gradeualtor
       </h1>
       <p class="subtitle">
-        coming soon
+        landing page is still under construction
       </p>
     </div>
   </section>
