--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </h1>
       <p class="subtitle">
         landing page is still under construction
+        <br> it will be up soon™
       </p>
     </div>
   </section>
