Add third-column note

--- a/third-column.html
+++ b/third-column.html
@@ -1,3 +1,5 @@
+<!-- Note: this html file is not used in the final version of gradeulator -->
+
 <!-- third column (enter button) -->
                 <div class="column">
                     <article class="media notification has-background-white">
