--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <figure class="image center">
                     <img src="assets/gradeulator-logo.png" style="max-width: 300px;">
                 </figure>
-                <h1 class="center subtitle has-text-gray is-size-4 has-text-gray">a desktop grade calculator</h1>
+                <h1 class="center subtitle has-text-gray is-size-4 has-text-gray">an online* grade calculator</h1>
             </div>
         </div>
     </section>
