--- a/index.html
+++ b/index.html
@@ -384,6 +384,6 @@
     <!-- close the footer  -->
 
     <!-- the script math file -->
-    <script src="/scripts/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/Furqan17/gradeulator@1b3fa06412c5ff4e7be49571fda3f3026ccc7ce5/scripts/index.js"></script>
   </body>
 </html>
