Fix gh-pages typo

--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
 
     <!-- the footer -->
     <footer class="center has-text-gray is-size-6"><strong>Note: </strong>&nbsp;This version of gradeulator</footer>
-    <footer class="center has-text-gray is-size-6">was ported from the electron application</footer>
-    <footer class="center has-text-gray is-size-6">if you wish to view the desktop application</footer>
+    <footer class="center has-text-gray is-size-6">was ported from the electron desktop application</footer>
+    <footer class="center has-text-gray is-size-6">to view the desktop application</footer>
     <footer class="center has-text-gray is-size-6">click the gradeulator logo below.</footer>
     <figure class="image center">
       <a href="https://github.com/Furqan17/gradeulator" target="_blank">
